[gd_scene load_steps=2 format=2]

[ext_resource path="res://documentation_elements/doc_illustrations/DocIllustrationNudge.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 0, 72 )
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
columns = 3

[node name="OutputLabel" type="Label" parent="GridContainer"]
offset_top = 5.0
offset_right = 78.0
offset_bottom = 19.0
text = "Nudge (x, w)"
align = 2

[node name="OutputSlider" type="HSlider" parent="GridContainer"]
offset_left = 82.0
offset_right = 338.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 256, 24 )
min_value = -1.0
max_value = 1.0
step = 0.01
editable = false
tick_count = 21
ticks_on_borders = true

[node name="Result" type="Label" parent="GridContainer"]
offset_left = 342.0
offset_top = 5.0
offset_right = 416.0
offset_bottom = 19.0

[node name="XLabel" type="Label" parent="GridContainer"]
offset_top = 33.0
offset_right = 78.0
offset_bottom = 47.0
text = "x"
align = 2

[node name="XSlider" type="HSlider" parent="GridContainer"]
offset_left = 82.0
offset_top = 28.0
offset_right = 338.0
offset_bottom = 44.0
custom_minimum_size = Vector2( 256, 0 )
min_value = -1.0
max_value = 1.0
step = 0.01
tick_count = 21
ticks_on_borders = true

[node name="XSpinBox" type="SpinBox" parent="GridContainer"]
offset_left = 342.0
offset_top = 28.0
offset_right = 416.0
offset_bottom = 52.0
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="YLabel" type="Label" parent="GridContainer"]
offset_top = 61.0
offset_right = 78.0
offset_bottom = 75.0
text = "w"
align = 2

[node name="YSlider" type="HSlider" parent="GridContainer"]
offset_left = 82.0
offset_top = 56.0
offset_right = 338.0
offset_bottom = 72.0
custom_minimum_size = Vector2( 256, 0 )
min_value = -1.0
max_value = 1.0
step = 0.01
tick_count = 21
ticks_on_borders = true

[node name="YSpinBox" type="SpinBox" parent="GridContainer"]
offset_left = 342.0
offset_top = 56.0
offset_right = 416.0
offset_bottom = 80.0
min_value = -1.0
max_value = 1.0
step = 0.01

[connection signal="value_changed" from="GridContainer/XSlider" to="." method="_on_XSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/XSpinBox" to="." method="_on_XSpinBox_value_changed"]
[connection signal="value_changed" from="GridContainer/YSlider" to="." method="_on_YSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/YSpinBox" to="." method="_on_YSpinBox_value_changed"]
